LibQhy.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;
using System.Text;

namespace Scopie;

internal struct QHYCamMinMaxStepValue
{
    [MarshalAs(UnmanagedType.LPStr)]
    public string name;
    public double min;
    public double max;
    public double step;
}

internal static unsafe class LibQhy
{
    private const CallingConvention CallConv = CallingConvention.StdCall;

    public static void Check(uint errorCode, [CallerArgumentExpression(nameof(errorCode))] string expression = null!)
    {
        if (errorCode != 0)
            throw new Exception($"QHYCCD SDK returned code {(int)errorCode}: {expression}");
    }

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void OutputQHYCCDDebug([MarshalAs(UnmanagedType.LPStr)] string strOutput);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetQHYCCDAutoDetectCamera(bool enable);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetQHYCCDLogLevel(byte logLevel);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void EnableQHYCCDMessage(bool enable);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void set_histogram_equalization(bool enable);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void EnableQHYCCDLogFile(bool enable);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDSingleFrameTimeOut(IntPtr h, uint time);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    [return: MarshalAs(UnmanagedType.LPStr)]
    public static extern string GetTimeStamp();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint InitQHYCCDResource();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ReleaseQHYCCDResource();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ScanQHYCCD();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDId(uint index, [MarshalAs(UnmanagedType.LPStr)] StringBuilder id);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDModel([MarshalAs(UnmanagedType.LPStr)] string id, [MarshalAs(UnmanagedType.LPStr)] StringBuilder model);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern IntPtr OpenQHYCCD([MarshalAs(UnmanagedType.LPStr)] string id);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint CloseQHYCCD(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDStreamMode(IntPtr handle, byte mode);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint InitQHYCCD(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint IsQHYCCDControlAvailable(IntPtr handle, ControlId controlId);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDControlName(IntPtr handle, ControlId controlId, [MarshalAs(UnmanagedType.LPStr)] StringBuilder IDname);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDParam(IntPtr handle, ControlId controlId, double value);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern double GetQHYCCDParam(IntPtr handle, ControlId controlId);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDParamMinMaxStep(IntPtr handle, ControlId controlId, out double min, out double max, out double step);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDResolution(IntPtr handle, uint x, uint y, uint xsize, uint ysize);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDMemLength(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ExpQHYCCDSingleFrame(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDSingleFrame(IntPtr handle, out uint w, out uint h, out uint bpp, out uint channels, [Out] byte[] imgdata);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint CancelQHYCCDExposing(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint CancelQHYCCDExposingAndReadout(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint BeginQHYCCDLive(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDLiveFrame(IntPtr handle, out uint w, out uint h, out uint bpp, out uint channels, byte* imgdata);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint StopQHYCCDLive(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDPcieRecv(IntPtr handle, void* data, int len, ulong timeout);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDPcieDDRNum(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDBinMode(IntPtr handle, uint wbin, uint hbin);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDBitsMode(IntPtr handle, uint bits);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ControlQHYCCDTemp(IntPtr handle, double targettemp);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ControlQHYCCDGuide(IntPtr handle, uint direction, ushort duration);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SendOrder2QHYCCDCFW(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] string order, uint length);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDCFWStatus(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] StringBuilder status);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint IsQHYCCDCFWPlugged(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDTrigerInterfaceNumber(IntPtr handle, out uint modeNumber);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDTrigerInterfaceName(IntPtr handle, uint modeNumber, [MarshalAs(UnmanagedType.LPStr)] StringBuilder name);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDTrigerInterface(IntPtr handle, uint trigerMode);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDTrigerFunction(IntPtr h, bool value);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDTrigerMode(IntPtr handle, uint trigerMode);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint EnableQHYCCDTrigerOut(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint EnableQHYCCDTrigerOutA(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SendSoftTriger2QHYCCDCam(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDTrigerFilterOnOff(IntPtr handle, bool onoff);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDTrigerFilterTime(IntPtr handle, uint time);

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern void Bits16ToBits8(QhyccdHandle h, byte* InputData16, byte* OutputData8, uint imageX, uint imageY, ushort B, ushort W);

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern void HistInfo192x130(QhyccdHandle h, uint x, uint y, byte* InBuf, byte* OutBuf);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint OSXInitQHYCCDFirmware([MarshalAs(UnmanagedType.LPStr)] string path);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint OSXInitQHYCCDFirmwareArray();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint OSXInitQHYCCDAndroidFirmwareArray(int idVendor, int idProduct, int fileDescriptor);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDChipInfo(IntPtr h, out double chipw, out double chiph, out uint imagew, out uint imageh, out double pixelw, out double pixelh, out uint bpp);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDEffectiveArea(IntPtr h, out uint startX, out uint startY, out uint sizeX, out uint sizeY);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDOverScanArea(IntPtr h, out uint startX, out uint startY, out uint sizeX, out uint sizeY);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDCurrentROI(IntPtr handle, out uint startX, out uint startY, out uint sizeX, out uint sizeY);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDImageStabilizationGravity(IntPtr handle, out int GravityX, out int GravityY);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDFocusSetting(IntPtr h, uint focusCenterX, uint focusCenterY);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDExposureRemaining(IntPtr h);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDFWVersion(IntPtr h, [Out] byte[] buf);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDFPGAVersion(IntPtr h, byte fpga_index, [Out] byte[] buf);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDInterCamSerialParam(IntPtr h, uint opt);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDInterCamSerialTX(IntPtr h, [MarshalAs(UnmanagedType.LPStr)] string buf, uint length);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDInterCamSerialRX(IntPtr h, [MarshalAs(UnmanagedType.LPStr)] StringBuilder buf);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDInterCamOledOnOff(IntPtr handle, byte onoff);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDInterCamOledBrightness(IntPtr handle, byte brightness);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SendFourLine2QHYCCDInterCamOled(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] string messagetemp, [MarshalAs(UnmanagedType.LPStr)] string messageinfo, [MarshalAs(UnmanagedType.LPStr)] string messagetime, [MarshalAs(UnmanagedType.LPStr)] string messagemode);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SendTwoLine2QHYCCDInterCamOled(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] string messageTop, [MarshalAs(UnmanagedType.LPStr)] string messageBottom);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SendOneLine2QHYCCDInterCamOled(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] string messageTop);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDCameraStatus(IntPtr h, byte* buf);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDShutterStatus(IntPtr handle);
